--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@types/mapbox-gl": "^2.6.0",
+    "angularx-social-login": "^4.0.1",
     "mapbox-gl": "^2.6.1",
     "ngx-page-scroll": "^7.0.6",
     "ngx-page-scroll-core": "^7.0.6",
